<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    android:background="@color/lego_amarillo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_app"
        android:textSize="38sp"
        android:textStyle="bold"
        android:textColor="@color/lego_rojo"
        android:fontFamily="sans-serif-black"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo_registro"
        android:textSize="14sp"
        android:textColor="@color/lego_negro"
        android:layout_marginBottom="32dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/lego_rojo"
        app:hintTextColor="@color/lego_rojo"
        app:boxBackgroundColor="@color/blanco"
        android:layout_marginBottom="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/lego_negro"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/lego_rojo"
        app:hintTextColor="@color/lego_rojo"
        app:boxBackgroundColor="@color/blanco"
        android:layout_marginBottom="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/lego_negro"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/lego_rojo"
        app:hintTextColor="@color/lego_rojo"
        app:boxBackgroundColor="@color/blanco"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="28dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/lego_negro"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_registro"
        android:backgroundTint="@color/lego_rojo"
        android:textColor="@color/blanco"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvYaCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_ya_cuenta"
        android:textColor="@color/lego_negro"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnIrLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_ir_login"
        android:backgroundTint="@color/lego_negro"
        android:textColor="@color/blanco"
        android:textStyle="bold"
        android:textSize="14sp"/>

</LinearLayout>